--- a/config.yaml
+++ b/config.yaml
@@ -3,52 +3,96 @@
 # so don't use it on production systems.
 #
 # Look here for more config file examples:
-# https://github.com/rlidwka/sinopia/tree/master/conf
+# https://github.com/verdaccio/verdaccio/tree/master/conf
 #
 
 # path to a directory with all packages
 storage: ./storage
+# path to a directory with plugins to include
+plugins: ./plugins
+
+web:
+  title: Verdaccio
+  # comment out to disable gravatar support
+  # gravatar: false
+  # by default packages are ordered in ascendant (asc|desc)
+  # sort_packages: asc
+  # convert your UI to the dark side
+  # darkMode: true
+
+# translate your registry, api i18n not available yet
+# i18n:
+# list of the available translations https://github.com/verdaccio/ui/tree/master/i18n/translations
+#   web: en-US
 
 auth:
   htpasswd:
     file: ./htpasswd
     # Maximum amount of users allowed to register, defaults to "+inf".
     # You can set this to -1 to disable registration.
-    #max_users: 1000
+    # max_users: 1000
 
 # a list of other known repositories we can talk to
 uplinks:
   npmjs:
     url: https://registry.npm.taobao.org/
+    agent_options:
+      keepAlive: true
+      maxSockets: 40
+      maxFreeSockets: 10
 
 packages:
   "@*/*":
     # scoped packages
     access: $authenticated
     publish: $authenticated
+    unpublish: $authenticated
+    proxy: npmjs
 
-  "*":
+  "**":
     # allow all users (including non-authenticated users) to read and
     # publish all packages
     #
     # you can specify usernames/groupnames (depending on your auth plugin)
     # and three keywords: "$all", "$anonymous", "$authenticated"
-    access: $all
+    access: $authenticated
 
-    # allow all known users to publish packages
+    # allow all known users to publish/publish packages
     # (anyone can register by default, remember?)
     publish: $authenticated
+    unpublish: $authenticated
 
     # if package is not available locally, proxy requests to 'npmjs' registry
     proxy: npmjs
 
+# You can specify HTTP/1.1 server keep alive timeout in seconds for incoming connections.
+# A value of 0 makes the http server behave similarly to Node.js versions prior to 8.0.0, which did not have a keep-alive timeout.
+# WORKAROUND: Through given configuration you can workaround following issue https://github.com/verdaccio/verdaccio/issues/301. Set to 0 in case 60 is not enough.
+server:
+  keepAliveTimeout: 60
+
+middlewares:
+  audit:
+    enabled: true
+
 # log settings
 logs:
-  - { type: stdout, format: pretty, level: http }
-  - { type: file, path: sinopia.log, level: info }
+  # - { type: stdout, format: pretty, level: http }
+  - { type: file, path: /etc/verdaccio/verdaccio.log, level: info }
+#experiments:
+#  # support for npm token command
+#  token: false
+#  # support for the new v1 search endpoint, functional by incomplete read more on ticket 1732
+#  search: false
+#  # disable writing body size to logs, read more on ticket 1912
+#  bytesin_off: false
+
+# This affect the web and api (not developed yet)
+#i18n:
+#web: en-US
 
 # if you use nginx with custom path, use this to override links
-#url_prefix: http://dev.company.local/sinopia/
+#url_prefix: /verdaccio/
 
 listen:
   - 0.0.0.0:4873 # listen on all addresses (INADDR_ANY)
